Fixed nav menu alignment issues.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -38,12 +38,8 @@ h2, h3 {
 
 header { 
   height:70px;
-  border: solid red 1px;
 }
 
-header ul { 
-  vertical-align:middle;
-}
 
 footer {
     bottom: 0;
@@ -92,17 +88,19 @@ ul, ol {
 }
 
 .navMenu {
-  border: solid blue 1px;
   list-style: none;
-  font-size:1.2em;
-  vertical-align:middle;
+  font-size:1.1em;
   text-transform:uppercase;
   padding-left:0px;
+  height:70px;
+  display:table;
 }
 
 .navMenu > li {
-  display: inline;
+  display: table-cell; 
+  vertical-align:middle;
   padding-right:.8em;
+  padding-top:10px;
 }
 
 .navMenu > li:before {
@@ -139,6 +137,10 @@ ul, ol {
   overflow-y:scroll;
   width:100%;
   height:100%;
+}
+
+.mealSelected { 
+  background-color:red;
 }
 
 .mealsScrollList li {
